new webdsl project wizard adds tomcat runtime and server instance using extracted tomcat in plugin directory and adds the project, if tomcat instance was already created only the project is added
svn path=/webdsl-editor/trunk/; revision=4036